Fix Past performance section of past performance edit page so that labels and input do not overlap at any screen widths.

--- a/src/app/pages/past-performance-edit/past-performance-edit.component.css
+++ b/src/app/pages/past-performance-edit/past-performance-edit.component.css
@@ -88,3 +88,7 @@ button {
   border-radius: 10px;
   border: 2px solid #757575;
 }
+
+.form-group > p {
+  white-space: nowrap;
+}
